--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -2,6 +2,8 @@
 
 @import './config/bootstrap';
 
+@import './objects/section';
+
 @import './components/header';
 @import './components/layout';
 @import './components/navbar';
