add location section

--- a/src/css/config/_bootstrap.scss
+++ b/src/css/config/_bootstrap.scss
@@ -69,3 +69,5 @@ $font-family-base: // Cross-platform generic font family (default user interface
 @import "../../../node_modules/bootstrap/scss/utilities/api";
 
 // 8. Add additional custom code here
+
+@import "../../../node_modules/bootstrap/scss/buttons";
