--- a/src/css/objects/_section.scss
+++ b/src/css/objects/_section.scss
@@ -1,17 +1,21 @@
 .o-section{
-    @extend .container-md;
+    @extend .container-md, .mt-5;
 }
 
 .o-section__col{
-    @extend .col-12, .col-md-6;
+    @extend .col-12, .col-md-6, .mt-3, .mt-md-0;
 }
 
 .o-section_col--full-width-mobile{
     @extend .px-0;
 }
 
+.o-section__title{
+    @extend .h1;
+}
+
 .o-section__text{
-    @extend .mt-3, .mt-md-0, .fs-4;
+    @extend .fs-4;
 }
 
 .o-section__img{
