--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -7,5 +7,6 @@
 @import './components/header';
 @import './components/layout';
 @import './components/navbar';
+@import './components/reggae-seperator';
 
 @import './pages/index';
