--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -8,5 +8,6 @@
 @import './components/layout';
 @import './components/navbar';
 @import './components/reggae-seperator';
+@import './components/logo';
 
 @import './pages/index';
