add activities section

--- a/src/css/config/_bootstrap.scss
+++ b/src/css/config/_bootstrap.scss
@@ -71,3 +71,4 @@ $font-family-base: // Cross-platform generic font family (default user interface
 // 8. Add additional custom code here
 
 @import "../../../node_modules/bootstrap/scss/buttons";
+@import "../../../node_modules/bootstrap/scss/card";
