--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -9,5 +9,6 @@
 @import './components/navbar';
 @import './components/reggae-seperator';
 @import './components/logo';
+@import './components/activity-item';
 
 @import './pages/index';
