rename activity item to info item, add info section files

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -2,8 +2,7 @@
 
 @import './config/bootstrap';
 
-@import './objects/section';
-
+@import './components/section';
 @import './components/header';
 @import './components/layout';
 @import './components/navbar';
