import bootstrap script dependencies, add carousel

--- a/src/css/config/_bootstrap.scss
+++ b/src/css/config/_bootstrap.scss
@@ -72,3 +72,4 @@ $font-family-base: // Cross-platform generic font family (default user interface
 
 @import "../../../node_modules/bootstrap/scss/buttons";
 @import "../../../node_modules/bootstrap/scss/card";
+@import "../../../node_modules/bootstrap/scss/carousel";
