implement layout and style for info cards

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -9,5 +9,6 @@
 @import './components/reggae-seperator';
 @import './components/logo';
 @import './components/activity-item';
+@import './components/floating-layout';
 
 @import './pages/index';
