--- a/src/css/components/_reggae-seperator.scss
+++ b/src/css/components/_reggae-seperator.scss
@@ -2,9 +2,14 @@
     height: 150px;
     width: 100vw;
     position: relative;
-    left: 50%;
     margin-left: -50vw;
+    left: -100%;
+    transition: left 1s ease-in;
+}
+
+.c-reggae-seperator--show{
     filter: sepia(60%);
+    left: 50%;
 }
 
 .c-reggae-seperator__img {
@@ -18,5 +23,4 @@
     .c-reggae-seperator {
         height: 300px;
     }
-
 }
