add get ticket cta on mobile

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -10,5 +10,6 @@
 @import './components/logo';
 @import './components/activity-item';
 @import './components/floating-layout';
+@import './components/get-ticket-cta';
 
 @import './pages/index';
