--- a/src/css/config/_bootstrap.scss
+++ b/src/css/config/_bootstrap.scss
@@ -1,4 +1,3 @@
-
 $bootstrap-icons-font-dir: '../../node_modules/bootstrap-icons/font/fonts';
 @import '../../../node_modules/bootstrap-icons/font/bootstrap-icons';
 
@@ -36,8 +35,8 @@ $font-family-base: // Cross-platform generic font family (default user interface
     "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
 
 
-// $primary:       #4a4;
-// $secondary:     $gray-600;
+$primary: #5bb24d;
+$secondary: #EEDB11;
 // $success:       $green;
 // $info:          $cyan;
 // $warning:       $yellow;
