adapt events list for desktop

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -13,5 +13,6 @@
 @import './components/activity-item';
 @import './components/floating-layout';
 @import './components/get-ticket-cta';
+@import './components/events-list';
 
 @import './pages/index';
