--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -4,6 +4,7 @@
 
 @import './components/button-link';
 
+@import './components/page';
 @import './components/section';
 @import './components/header';
 @import './components/layout';
