--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -12,6 +12,7 @@
 @import './components/reggae-seperator';
 @import './components/logo';
 @import './components/activity-item';
+@import './components/news-item';
 @import './components/floating-layout';
 @import './components/get-ticket-cta';
 @import './components/events-list';
