--- a/src/css/components/_news-item.scss
+++ b/src/css/components/_news-item.scss
@@ -4,26 +4,66 @@
     justify-content: start;
     align-items: flex-start;
     position: relative;
+    transition: all 0.35s ease-in-out;
+    max-height: 200px;
+    text-decoration: none;
+    color: black;
+
+    &:hover {
+        border-left: 4px solid rgba($color: #000000, $alpha: 0.8);
+        padding-left: 16px;
+    }
 }
 
-.c-news-item__text-container {
-}
+.c-news-item__text-container {}
 
 .c-news-item__title {
     @extend .mb-1;
 }
 
-.c-news-item__text {}
+.c-news-item__datetime {
+    text-decoration: none;
+}
+
+.c-news-item__text {
+    display: none;
+}
 
 .c-news-item__thumbnail {
-    @extend .mt-2;
+    margin-top: 0.5rem;
 
-    border-left: 4px solid rgba($color: #000000, $alpha: 0.8);
-    padding-left: 8px;
-    img{
-        width: 100%;
-        height: 100%;
+    img {
+        // width: 100%;
+        max-height: 350px;
         object-fit: contain;
-        max-height: 200px;
+    }
+}
+
+@include media-breakpoint-up(md) {
+    .c-news-item {
+        flex-direction: row;
+        max-height: 350px;
+    }
+
+    .c-news-item__text-container {
+        margin-left: 32px;
+        order: 2;
+    }
+
+    .c-news-item__text {
+        display: block;
+        margin-top: 24px;
+        & > p {
+            margin-bottom: 8px;
+        }
+    }
+
+    .c-news-item__thumbnail {
+        margin-top: 0;
+        order: 1;
+
+        img {
+            max-height: 350px;
+        }
     }
 }
