--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -9,6 +9,7 @@
 @import './components/header';
 @import './components/layout';
 @import './components/navbar';
+@import './components/list';
 @import './components/reggae-seperator';
 @import './components/logo';
 @import './components/activity-item';
