--- a/src/css/components/_news-item.scss
+++ b/src/css/components/_news-item.scss
@@ -5,7 +5,6 @@
     align-items: flex-start;
     position: relative;
     transition: all 0.35s ease-in-out;
-    max-height: 200px;
     text-decoration: none;
     overflow: hidden;
     color: black;
@@ -23,6 +22,7 @@
 }
 
 .c-news-item__datetime {
+    @extend .text-muted;
     text-decoration: none;
 }
 
@@ -34,7 +34,6 @@
     margin-top: 0.5rem;
 
     img {
-        // width: 100%;
         max-height: 350px;
         object-fit: contain;
     }
@@ -43,7 +42,6 @@
 @include media-breakpoint-up(md) {
     .c-news-item {
         flex-direction: row;
-        max-height: 350px;
     }
 
     .c-news-item__text-container {
