--- a/src/css/components/_section.scss
+++ b/src/css/components/_section.scss
@@ -1,6 +1,21 @@
-.c-section{
+.c-section {
+    margin-top: 80px;
 
+    &:first-child{
+        margin-top: 48px;
+    }
 }
-.c-section__title{
+
+.c-section__title {
     @extend .h1;
+    text-transform: uppercase;
+    font-weight: bold;
+
+    & + * {
+        margin-top: 24px;
+    }
+}
+
+.c-section__text{
+    @extend .fs-4;
 }
