--- a/src/css/components/_section.scss
+++ b/src/css/components/_section.scss
@@ -1,8 +1,30 @@
-.c-section {
-    margin-top: 80px;
+$margin-top-mobile: 40px;
+$margin-top-desktop: 80px;
 
-    &:first-child{
-        margin-top: 48px;
+.c-section {
+    margin-top: $margin-top-mobile;
+
+    &:first-child {
+        margin-top: calc($margin-top-mobile / 2) ;
+    }
+}
+
+.c-section--no-spacing-mobile {
+    margin-top: 0px;
+}
+
+
+@include media-breakpoint-up(md) {
+    .c-section {
+        margin-top: $margin-top-desktop;
+
+        &:first-child {
+            margin-top: calc($margin-top-desktop / 2);
+        }
+    }
+
+    .c-section--no-spacing-mobile { 
+        margin-top: $margin-top-desktop;
     }
 }
 
@@ -11,11 +33,11 @@
     text-transform: uppercase;
     font-weight: bold;
 
-    & + * {
+    &+* {
         margin-top: 24px;
     }
 }
 
-.c-section__text{
+.c-section__text {
     @extend .fs-4;
 }
