layout follow us section

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -17,5 +17,6 @@
 @import './components/floating-layout';
 @import './components/get-ticket-cta';
 @import './components/events-list';
+@import './components/follow-us';
 
 @import './pages/index';
