--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
 
 @import './config/bootstrap';
+@import './config/config';
 
 @import './components/button-link';
 
@@ -9,6 +10,7 @@
 @import './components/header';
 @import './components/layout';
 @import './components/navbar';
+@import './components/sidebar';
 @import './components/list';
 @import './components/reggae-seperator';
 @import './components/logo';
