--- a/src/css/components/_navbar.scss
+++ b/src/css/components/_navbar.scss
@@ -35,12 +35,17 @@
 
 .c-navbar__menu-list-item {
     @extend .ms-3;
+}
 
-    a {
-        @extend .text-white, .fs-4;
-        text-decoration: none;
-        text-transform: uppercase;
-    }
+.c-navbar__link {
+    @extend .fs-4;
+    color: #fff;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+
+.c-navbar__link--active {
+    color: $secondary;
 }
 
 @include media-breakpoint-up(md) {
