--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -12,6 +12,7 @@
 @import './components/navbar';
 @import './components/sidebar';
 @import './components/list';
+@import './components/link';
 @import './components/reggae-seperator';
 @import './components/logo';
 @import './components/activity-item';
