- move social items to seperate component - add social items to sidebar

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -21,5 +21,6 @@
 @import './components/get-ticket-cta';
 @import './components/events-list';
 @import './components/follow-us';
+@import './components/social-list';
 
 @import './pages/index';
