--- a/src/css/components/_page.scss
+++ b/src/css/components/_page.scss
@@ -2,6 +2,11 @@
 
 }
 
+.c-page--no-scroll{
+    height: 100vh;
+    overflow: hidden;    
+}
+
 .c-page__title{
     @extend .mt-5;
     text-transform: uppercase;
