--- a/src/css/components/_navbar.scss
+++ b/src/css/components/_navbar.scss
@@ -1,9 +1,9 @@
 .c-navbar {
-    @extend .p-3;
-    z-index: $z-index-navbar;
     display: flex;
     justify-content: flex-end;
     align-items: center;
+    z-index: $z-index-navbar;
+    padding: 1rem;
 }
 
 // .c-navbar__title {
@@ -47,6 +47,8 @@
 @include media-breakpoint-up(md) {
     .c-navbar {
         justify-content: space-between;
+        padding-left: 1.5rem;
+        padding-right: 1.5rem;
     }
 
     .c-navbar__logo {
