--- a/src/css/components/_navbar.scss
+++ b/src/css/components/_navbar.scss
@@ -7,7 +7,7 @@
     justify-content: flex-end;
     align-items: center;
     z-index: $z-index-navbar;
-    padding: 1rem;
+    padding: 0.5rem;
     transition: background-color 0.25s ease-in;
 }
 
@@ -58,8 +58,7 @@
 @include media-breakpoint-up(md) {
     .c-navbar {
         justify-content: space-between;
-        padding-left: 1.5rem;
-        padding-right: 1.5rem;
+        padding: 1rem 1.5rem;        
     }
 
     .c-navbar__logo {
