--- a/src/css/components/_social-list.scss
+++ b/src/css/components/_social-list.scss
@@ -7,9 +7,9 @@
     padding: 0;
 }
 
-.c-social-list--black{
-    .c-social-list__item{
-        a{
+.c-social-list--black {
+    .c-social-list__item {
+        a {
             color: #000;
         }
     }
@@ -17,11 +17,9 @@
 
 .c-social-list__item {
     margin: 0;
-
-    &:last-child {
-        margin-left: 36px;
+    &:nth-child(even) {
+        margin: 0 36px;
     }
-
     a {
         font-size: 3rem;
         color: $secondary;
