add a couple of artists assets and main stage section

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -20,5 +20,6 @@
 @import './components/follow-us';
 @import './components/social-list';
 @import './components/_essay.scss';
+@import './components/lineup-artist';
 @import './pages/index';
 @import './pages/news-detail';
