--- a/src/css/components/_lineup-artist.scss
+++ b/src/css/components/_lineup-artist.scss
@@ -1,9 +1,37 @@
 .c-lineup-artist {}
 
-.c-lineup-artst__cover {
+.c-lineup-artist__cover {
     display: none;
     width: 100%;
     height: 350px;
     object-fit: cover;
     object-position: 50% 50%;
+}
+
+@include media-breakpoint-up(md) {
+    .c-lineup-artist {
+        position: relative;
+    }
+    .c-lineup-artist__cover {
+        display: block;
+    }
+    .c-lineup-artist__title {
+        display: none;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+    .c-lineup-artist:hover {
+        &.c-lineup-artist::before {
+            content: '';
+            width: 100%;
+            height: 100%;
+            background-color: rgba($color: #000000, $alpha: 0.5);
+            position: absolute;
+        }
+        .c-lineup-artist__title {
+            display: block;
+        }
+    }
 }
