--- a/src/css/components/_lineup-artist.scss
+++ b/src/css/components/_lineup-artist.scss
@@ -7,6 +7,8 @@
 @include media-breakpoint-up(md) {
     .c-lineup-artist {
         position: relative;
+        border-radius: 8px;
+        overflow: hidden;
         &::before {
             content: '';
             width: 100%;
