--- a/src/css/pages/_lineup.scss
+++ b/src/css/pages/_lineup.scss
@@ -6,5 +6,7 @@
     .c-page-lineup__list {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
+        column-gap: 24px;
+        row-gap: 24px;
     }
 }
