--- a/src/css/components/_lineup-artist.scss
+++ b/src/css/components/_lineup-artist.scss
@@ -16,6 +16,7 @@
             background-color: rgba($color: #000000, $alpha: 0);
             position: absolute;
             transition: background-color 0.375s ease-in;
+            z-index: 1;
         }
     }
     .c-lineup-artist__cover {
@@ -29,6 +30,7 @@
         position: absolute;
         top: 50%;
         left: 50%;
+        z-index: 2;
         transform: translate(-50%, -50%) scale(0%);
         transform-origin: center;
         opacity: 0;
@@ -36,6 +38,7 @@
         font-weight: 700;
         letter-spacing: 1.25px;
         color: white;
+        text-align: center;
         transition-property: transform, opacity;
         transition-duration: 0.375s, 0.3s;
         transition-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275);
