--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,26 +1,27 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
-@import './config/bootstrap';
-@import './config/config';
-@import './components/button-link';
-@import './components/page';
-@import './components/section';
-@import './components/header';
-@import './components/layout';
-@import './components/navbar';
-@import './components/sidebar';
-@import './components/list';
-@import './components/link';
-@import './components/reggae-seperator';
-@import './components/logo';
-@import './components/activity-item';
-@import './components/news-item';
-@import './components/floating-layout';
-@import './components/get-ticket-cta';
-@import './components/events-list';
-@import './components/follow-us';
-@import './components/social-list';
-@import './components/_essay.scss';
-@import './components/lineup-artist';
-@import './pages/index';
-@import './pages/news-detail';
-@import './pages/lineup';
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap");
+@import "./config/bootstrap";
+@import "./config/config";
+@import "./components/button-link";
+@import "./components/page";
+@import "./components/section";
+@import "./components/header";
+@import "./components/layout";
+@import "./components/navbar";
+@import "./components/sidebar";
+@import "./components/list";
+@import "./components/link";
+@import "./components/reggae-seperator";
+@import "./components/logo";
+@import "./components/activity-item";
+@import "./components/news-item";
+@import "./components/floating-layout";
+@import "./components/get-ticket-cta";
+@import "./components/events-list";
+@import "./components/follow-us";
+@import "./components/social-list";
+@import "./components/_essay.scss";
+@import "./components/lineup-artist";
+@import "./components/lineup-stage";
+@import "./pages/index";
+@import "./pages/news-detail";
+@import "./pages/lineup";
