--- a/src/css/components/_lineup-stage.scss
+++ b/src/css/components/_lineup-stage.scss
@@ -12,9 +12,15 @@
 
 @include media-breakpoint-up(md) {
   .c-lineup-stage__list {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    column-gap: 24px;
-    row-gap: 24px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    
+  }
+  
+  .c-lineup-stage__list-item{
+    flex: 33%;
+    padding: 12px;
+    max-width: 296px;
   }
 }
