--- a/src/css/components/_lineup-artist.scss
+++ b/src/css/components/_lineup-artist.scss
@@ -2,7 +2,9 @@
 }
 
 .c-lineup-artist__cover {
-  display: none;
+  &.gatsby-image-wrapper {
+    display: none;
+  }
 }
 .c-lineup-artist__country {
   text-decoration: none;
