when section with reggae background

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -22,6 +22,7 @@
 @import "./components/_essay.scss";
 @import "./components/lineup-artist";
 @import "./components/lineup-stage";
+@import "./components/when-section";
 @import "./pages/index";
 @import "./pages/news-detail";
 @import "./pages/lineup";
