--- a/src/css/components/_when-section.scss
+++ b/src/css/components/_when-section.scss
@@ -3,6 +3,9 @@
   justify-content: center;
   align-items: center;
   position: relative;
+  border-top: 4px solid rgba(0, 0, 0, 0.4);
+  border-bottom: 4px solid rgba(0, 0, 0, 0.4);
+
 }
 
 .c-when-section__bg {
