--- a/src/css/components/_get-ticket-cta.scss
+++ b/src/css/components/_get-ticket-cta.scss
@@ -1,7 +1,7 @@
 .c-get-ticket-cta {
-    min-height: 350px;
+    min-height: 479px;
     width: 100%;
-    background-size: cover;
+    background-size: contain;
     position: relative;
 
     &::before {
@@ -12,7 +12,7 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background-color: rgba($color: #000000, $alpha: 0.3);
+        background-color: rgba($color: #000000, $alpha: 0.4);
     }
 }
 
@@ -25,7 +25,8 @@
     left: 0;
     width: 100%;
     height: 100%;
-    object-fit: cover
+    object-fit: cover;
+    // filter: grayscale(40%);
 }
 
 .c-get-ticket-cta__btn {
