--- a/src/css/components/_get-ticket-cta.scss
+++ b/src/css/components/_get-ticket-cta.scss
@@ -1,44 +1,44 @@
 .c-get-ticket-cta {
-    min-height: 479px;
-    width: 100%;
-    background-size: contain;
-    position: relative;
+  min-height: 320px;
 
-    &::before {
-        content: '';
-        position: absolute;
-        z-index: 1;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba($color: #000000, $alpha: 0.4);
-    }
-}
+  width: 100%;
+  background-size: contain;
+  position: relative;
 
-
-
-.c-get-ticket-cta__image {
+  &::before {
+    content: "";
     position: absolute;
-    z-index: 0;
+    z-index: 1;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    object-fit: cover;
-    // filter: grayscale(40%);
+    background-color: rgba($color: #000000, $alpha: 0.4);
+  }
+}
+
+.c-get-ticket-cta__image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  // filter: grayscale(40%);
 }
 
 .c-get-ticket-cta__btn {
-    position: absolute;
-    z-index: 1;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+  position: absolute;
+  z-index: 0;
+  top: 0;
+  left: 0;
+  position: absolute;
+  z-index: 1;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 @include media-breakpoint-up(md) {
-    .c-get-ticket-cta__image {
-        object-position: 0% 60%;
-    }
+  .c-get-ticket-cta__image {
+    min-height: 479px;
+    object-position: center center;
+  }
 }
