--- a/src/css/components/_header.scss
+++ b/src/css/components/_header.scss
@@ -1,24 +1,25 @@
 .c-header {
   position: relative;
   text-align: center;
-  background: rgba(41, 49, 37, 1) 100%;
-  height: 332px;
+  background: yellow;
+  // height: 332px;
+  // width: 100vw;
 }
 
 .c-header__img {
-  height: 100%;
-  width: 100vw;
-  object-fit: cover;
+  // height: 100%;
+  width: 100%;
+  object-fit: contain;
 }
 
 @include media-breakpoint-up(md) {
   .c-header {
-    height: 616px;
+    // height: 616px;
   }
 }
 
 @include media-breakpoint-up(lg) {
   .c-header__img {
-    width: unset;
+    // width: unset;
   }
 }
