--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -23,6 +23,7 @@
 @import "./components/lineup-artist";
 @import "./components/lineup-stage";
 @import "./components/when-section";
+@import "./components/activity-item";
 @import "./pages/index";
 @import "./pages/news-detail";
 @import "./pages/lineup";
