--- a/src/css/config/_bootstrap.scss
+++ b/src/css/config/_bootstrap.scss
@@ -9,6 +9,15 @@ $bootstrap-icons-font-dir: '../../node_modules/bootstrap-icons/font/fonts';
 
 // 2. Include any default variable overrides here
 
+$carousel-control-color:             $color-yellow;
+$carousel-control-width:             15%;
+$carousel-control-opacity:           .3;
+$carousel-control-icon-width:        4rem;
+
+$carousel-indicator-width:           30px;
+$carousel-indicator-height:          3px;
+
+
 // Include any default variable overrides here (though functions won't be available)
 
 // $headings-font-family: 'Roboto Condensed';
