--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -24,6 +24,7 @@
 @import "./components/when-section";
 @import "./components/dropdown";
 @import "./components/merch-item";
+@import "./components/photo-album";
 @import "./pages/index";
 @import "./pages/news-detail";
 @import "./pages/lineup";
