--- a/src/css/components/_page.scss
+++ b/src/css/components/_page.scss
@@ -1,16 +1,22 @@
 .c-page {
-    position: relative;
+  position: relative;
 }
 
 .c-page--no-scroll {
-    height: 100vh;
-    overflow: hidden;
+  height: 100vh;
+  overflow: hidden;
 }
 
 .c-page__title {
-    @extend .mt-5;
-    text-transform: uppercase;
+  @extend .mt-5;
+  text-transform: uppercase;
+  font-size: 2.7em;
+  letter-spacing: 0.125em;
+  font-weight: bold;
+}
+
+@include media-breakpoint-up(md) {
+  .c-page__title {
     font-size: 3em;
-    letter-spacing: 0.125em;
-    font-weight: bold;
+  }
 }
