--- a/src/css/components/_photo-album.scss
+++ b/src/css/components/_photo-album.scss
@@ -1,13 +1,21 @@
-.c-photo-album{
-    display: flex;
-    flex-wrap: wrap;
+.c-photo-album {
+  display: flex;
+  flex-wrap: wrap;
+}
+.c-photo-album__img-container {
+    padding-bottom: 25px;
+  img {
+    width: 100%;
+  }
 }
 
-.c-photo-album__img-container{
+@include media-breakpoint-up(md) {
+  .c-photo-album__img-container {
     flex-basis: 33%;
     padding: 10px;
 
-    img{
-        width: 100%;
+    img {
+      width: 100%;
     }
+  }
 }
