add contact form to order page

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -25,6 +25,7 @@
 @import "./components/dropdown";
 @import "./components/merch-item";
 @import "./components/photo-album";
+@import "./components/contact-form";
 @import "./pages/index";
 @import "./pages/news-detail";
 @import "./pages/lineup";
