position cart on the right side

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -26,6 +26,7 @@
 @import "./components/merch-item";
 @import "./components/photo-album";
 @import "./components/contact-form";
+@import "./components/shopping-cart";
 @import "./pages/index";
 @import "./pages/news-detail";
 @import "./pages/lineup";
