merch-item becomes product-card

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -23,7 +23,7 @@
 @import "./components/lineup-stage";
 @import "./components/when-section";
 @import "./components/dropdown";
-@import "./components/merch-item";
+@import "./components/product-card";
 @import "./components/photo-album";
 @import "./components/contact-form";
 @import "./components/shopping-cart";
