--- a/src/css/components/_product-card.scss
+++ b/src/css/components/_product-card.scss
@@ -1,14 +1,14 @@
-.c-merch-item {
+.c-product-card {
     overflow: hidden;
 }
-.c-merch-item__overlay {
+.c-product-card__overlay {
   opacity: 0;
   transition: opacity 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94);
   background-color: rgba($color: #000000, $alpha: 0.5);
 }
 
 @include media-breakpoint-up(md) {
-  .c-merch-item:hover .c-merch-item__overlay {
+  .c-product-card:hover .c-product-card__overlay {
     opacity: 1;
   }
 }
