--- a/src/css/components/_product-card.scss
+++ b/src/css/components/_product-card.scss
@@ -6,6 +6,10 @@
   transition: opacity 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94);
   background-color: rgba($color: #000000, $alpha: 0.5);
 }
+.c-product-card--img{
+  object-fit: contain;
+  width: 100%;
+}
 
 @include media-breakpoint-up(md) {
   .c-product-card:hover .c-product-card__overlay {
