--- a/src/css/components/_shopping-cart.scss
+++ b/src/css/components/_shopping-cart.scss
@@ -4,3 +4,41 @@
   right: 0;
   top: 0;
 }
+
+.c-shopping-cart--container {
+  display: none;
+}
+
+.c-shopping-cart.c-shopping-cart--collapsed {
+  position: fixed;
+  top: unset;
+  bottom: 50px;
+  right: 50px;
+}
+
+.c-shopping-cart--toggle button {
+  height: 65px;
+  width: 65px;
+}
+
+.c-shopping-cart--toggle {
+  position: relative;
+}
+.c-shopping-cart--toggle-counter-bg {
+  height: 20px;
+  width: 20px;
+  position: absolute;
+  top: 7px;
+  right: 7px;
+  max-width: 20px;
+}
+.c-shopping-cart--toggle-counter {
+  line-height: 20px;
+
+  font-size: 12px;
+
+  // max-width: 100%;
+  // white-space: nowrap;
+  // overflow: hidden;
+  // text-overflow: ellipsis;
+}
