--- a/src/css/config/_config.scss
+++ b/src/css/config/_config.scss
@@ -1,5 +1,6 @@
 $z-index-navbar: 9;
 $z-index-sidebar: 10;
+$z-index-shopping-cart: 11;
 $color-red: rgb(241, 74, 66);
 $color-yellow: rgb(248, 190, 42);
 $color-green: rgb(83, 168, 57);
