--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -27,6 +27,7 @@
 @import "./components/photo-album";
 @import "./components/contact-form";
 @import "./components/shopping-cart";
+@import "./components/shopping-cart-item";
 @import "./pages/index";
 @import "./pages/news-detail";
 @import "./pages/lineup";
